change theme to blue

--- a/up2secure/templates/base.html
+++ b/up2secure/templates/base.html
@@ -17,7 +17,7 @@
   <!-- Theme style -->
   <link rel="stylesheet" href="{% static 'css/AdminLTE.min.css' %}">
   <!-- Skin -->
-  <link rel="stylesheet" href="{% static 'css/skin-green.min.css' %}">
+  <link rel="stylesheet" href="{% static 'css/skin-blue.min.css' %}">
   <!-- Date Picker -->
   <link rel="stylesheet" href="{% static 'css/bootstrap-datepicker.min.css' %}">
   <!-- Daterange picker -->
@@ -39,7 +39,7 @@
 
   <link rel="stylesheet" href="{% static 'overtone.css' %}">
 </head>
-<body class="hold-transition skin-green sidebar-mini">
+<body class="hold-transition skin-blue sidebar-mini">
 
 <div class="wrapper">
 
@@ -47,7 +47,7 @@
     <!-- Logo -->
     <a href="index2.html" class="logo">
       <span class="logo-mini"><b>U2S</b></span>
-      <span class="logo-lg"><b>Up2Secure</b></span>
+      <span class="logo-lg"><i class="fa fa-server"></i><b>Up2Secure</b></span>
     </a>
     <nav class="navbar navbar-static-top">
       <!-- Sidebar toggle button-->
