--- a/up2secure/templates/userland/home.html
+++ b/up2secure/templates/userland/home.html
@@ -5,20 +5,10 @@
 {% block content %}
 
   <div class="row">
-    <div class="col-xs-12">
-      <div class="alert alert-primary alert-dismissible">
-        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-        <h4><i class="icon fa fa-check"></i> Welcome!</h4>
-        All system operating. How is your day?
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
 
     <!-- SERVERS BOX -->
     <div class="col-lg-4 col-xs-6">
-      <div class="small-box bg-green">
+      <div class="small-box bg-primary">
         <div class="inner">
           <h3>0</h3>
           <p>Servers</p>
