--- a/up2secure/templates/userland/servers.html
+++ b/up2secure/templates/userland/servers.html
@@ -57,18 +57,15 @@
     </div>
 </div>
 
-<div class="row">
-<div class="col-xs-12">
-  <div class="alert alert-success alert-dismissible">
-    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+<div class="box">
+  <div class="alert alert-primary">
     <h4><i class="icon fa fa-plus-circle"></i> How to add new server?</h4>
     You can add new server within seconds. Just run the following command as a root user on machine you want to add.
     <div class="input-group">
         <input type="text" class="form-control" value="wget ...">
         <span class="input-group-addon"><i class="fa fa-clipboard"></i></span>
+    </div>
   </div>
-  </div>
-</div>
 </div>
 {% endblock content %}
 
