--- a/up2secure/templates/userland/accounting.html
+++ b/up2secure/templates/userland/accounting.html
@@ -4,6 +4,15 @@
 
 {% block menu_accounting %}active{% endblock %}
 
+{% block contentheader %}
+    <h1>
+      Accounting
+    </h1>
+    <ol class="breadcrumb">
+      <li><a href="#"><i class="fa fa-usd"></i> Accounting</a></li>
+    </ol>
+{% endblock contentheader %}
+
 {% block content %}
 Soon ...
 {% endblock content %}
