--- a/up2secure/templates/userland/servers.html
+++ b/up2secure/templates/userland/servers.html
@@ -8,6 +8,17 @@
 <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 {% endblock extendhead %}
 
+{% block contentheader %}
+    <h1>
+      Servers
+      <small>All categories</small>
+    </h1>
+    <ol class="breadcrumb">
+      <li><a href="#"><i class="fa fa-server"></i> Servers</a></li>
+      <li class="active">All categories</li>
+    </ol>
+{% endblock contentheader %}
+
 {% block content %}
 <div class="box">
     <div class="box-header">
