--- a/up2secure/templates/userland/updates.html
+++ b/up2secure/templates/userland/updates.html
@@ -4,6 +4,15 @@
 
 {% block menu_updates %}active{% endblock %}
 
+{% block contentheader %}
+    <h1>
+      Updates
+    </h1>
+    <ol class="breadcrumb">
+      <li><a href="#"><i class="fa fa-refresh"></i> Updates</a></li>
+    </ol>
+{% endblock contentheader %}
+
 {% block content %}
 Soon ...
 {% endblock content %}
