--- a/up2secure/templates/userland/home.html
+++ b/up2secure/templates/userland/home.html
@@ -2,8 +2,17 @@
 
 {% load staticfiles %}
 {% block menu_homepage %}active{% endblock %}
-{% block content %}
 
+{% block contentheader %}
+    <h1>
+      Home
+    </h1>
+    <ol class="breadcrumb">
+      <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+    </ol>
+{% endblock contentheader %}
+
+{% block content %}
   <div class="row">
 
     <!-- SERVERS BOX -->
@@ -31,7 +40,7 @@
         <div class="icon">
           <i class="fa fa-refresh"></i>
         </div>
-        <a href="#" class="small-box-footer">Update&nbsp;&nbsp;<i class="fa fa-arrow-circle-right"></i></a>
+        <a href="{% url 'updates' %}" class="small-box-footer">Update&nbsp;&nbsp;<i class="fa fa-arrow-circle-right"></i></a>
       </div>
     </div>
     <!-- CREDITS BOX END -->
