add reseller, customer and server app, create simple server model

--- a/up2secure/static/overtone.css
+++ b/up2secure/static/overtone.css
@@ -8,3 +8,7 @@
 table#servers .devicon-debian-plain {
 	color: #3c8dbc;
 }
+
+.navbar-nav>.user-menu>.dropdown-menu>li.user-header {
+	height: auto;
+}
