--- a/up2secure/templates/reseller/reseller_list.html
+++ b/up2secure/templates/reseller/reseller_list.html
@@ -2,14 +2,16 @@
 
 {% load staticfiles %}
 
-{% block menu_updates %}active{% endblock %}
+{% block menu_reseller %}active{% endblock %}
 
 {% block contentheader %}
     <h1>
-      Updates
+      Resellers
+      <small>List</small>
     </h1>
     <ol class="breadcrumb">
-      <li><a href="#"><i class="fa fa-refresh"></i> Updates</a></li>
+      <li><a href="#"><i class="fa fa-server"></i> Resellers</a></li>
+      <li class="active">List</li>
     </ol>
 {% endblock contentheader %}
 
