--- a/up2secure/templates/base.html
+++ b/up2secure/templates/base.html
@@ -45,9 +45,9 @@
 
   <header class="main-header">
     <!-- Logo -->
-    <a href="index2.html" class="logo">
+    <a href="/" class="logo">
       <span class="logo-mini"><b>U2S</b></span>
-      <span class="logo-lg"><i class="fa fa-server"></i>&nbsp;<b>Up2Secure</b></span>
+      <span class="logo-lg"><b>Up2Secure</b> <i class="fa fa-server"></i></span>
     </a>
     <nav class="navbar navbar-static-top">
       <!-- Sidebar toggle button-->
@@ -99,7 +99,8 @@
                 <img src="{% static 'gfx/user-160x160.png' %}" class="img-circle" alt="User Image">
                 <p>
                   <strong>Username</strong><br />
-                  <i>thisisemail@address.com</i>
+                  <i>thisisemail@address.com</i><br />
+                  <small><strong>Administrator</strong></small>
                 </p>
               </li>
               <!-- Menu Footer-->
@@ -126,19 +127,19 @@
         </div>
         <div class="pull-left info">
           <p>Username</p>
-          <a href="#"> Credits: 1000</a>
+          <a href="#"> Administrator</a>
         </div>
       </div>
 
       <ul class="sidebar-menu" data-widget="tree">
 
         <li class="{% block menu_homepage %}{% endblock %}">
-          <a href="{% url 'home' %}">
-            <i class="fa fa-home"></i> <span>Home</span>
+          <a href="{% url 'dashboard' %}">
+            <i class="fa fa-dashboard"></i> <span>Dashboard</span>
           </a>
         </li>
 
-        <li class="{% block menu_servers %}{% endblock %} treeview">
+        <li class="{% block menu_server %}{% endblock %} treeview">
           <a href="#">
             <i class="fa fa-server"></i> <span>Servers</span>
             <span class="pull-right-container">
@@ -147,23 +148,35 @@
           </a>
           <ul class="treeview-menu">
             <li>
-              <a href="{% url 'servers' %}"><i class="fa fa-angle-right"></i> All categories</a>
+              <a href="{% url 'server_list' %}"><i class="fa fa-angle-right"></i> Control panel</a>
             </li>
             <li>
-              <a href="{% url 'servers' %}"><i class="fa fa-angle-right"></i> Category #1</a>
+              <a href="{% url 'server_list' %}"><i class="fa fa-angle-right"></i> Server Group #1</a>
             </li>
           </ul>
         </li>
 
-        <li class="{% block menu_updates %}{% endblock %}">
-          <a href="{% url 'updates' %}">
-            <i class="fa fa-refresh"></i> <span>Updates</span>
+        <li class="{% block menu_reseller %}{% endblock %}">
+          <a href="{% url 'reseller_list' %}">
+            <i class="fa fa-handshake-o"></i> <span>Resellers</span>
+          </a>
+        </li>
+
+        <li class="{% block menu_customer %}{% endblock %}">
+          <a href="{% url 'customer_list' %}">
+            <i class="fa fa-user-circle-o"></i> <span>Customers</span>
           </a>
         </li>
 
         <li class="{% block menu_accounting %}{% endblock %}">
           <a href="{% url 'accounting' %}">
             <i class="fa fa-usd"></i> <span>Accounting</span>
+          </a>
+        </li>
+
+        <li class="{% block menu_history %}{% endblock %}">
+          <a href="{% url 'history' %}">
+            <i class="fa fa-history"></i> <span>History</span>
           </a>
         </li>
 
