some minor frontend changes

--- a/up2secure/static/overtone.css
+++ b/up2secure/static/overtone.css
@@ -12,3 +12,7 @@ table#servers .devicon-debian-plain {
 .navbar-nav>.user-menu>.dropdown-menu>li.user-header {
 	height: auto;
 }
+
+table.table.table-hover td {
+	cursor: pointer;
+}
