--- a/up2secure/templates/base.html
+++ b/up2secure/templates/base.html
@@ -47,7 +47,7 @@
     <!-- Logo -->
     <a href="/" class="logo">
       <span class="logo-mini"><b>U2S</b></span>
-      <span class="logo-lg"><b>Up2Secure</b> <i class="fa fa-server"></i></span>
+      <span class="logo-lg"><b>Up2Secure</b></span>
     </a>
     <nav class="navbar navbar-static-top">
       <!-- Sidebar toggle button-->
