--- a/up2secure/templates/server/servers.html
+++ b/up2secure/templates/server/servers.html
@@ -22,7 +22,7 @@
 {% block content %}
 
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-7">
     <div class="box">
         <div class="box-header">
           <h3 class="box-title">Servers</h3>
@@ -51,26 +51,35 @@
                       <td><i class="devicon-debian-plain"></i></td>
                       <td>SuperHost</td>
                       <td>32.51.23.55</td>
-                      <td class="text-center"><span class="badge bg-green">UPDATED</span></td>
+                      <td class="text-center"><span class="badge bg-green">UP&nbsp;TO&nbsp;DATE</span></td>
                   </tr>
                   <tr>
                       <td><i class="devicon-debian-plain"></i></td>
                       <td>SuperHost</td>
                       <td>32.51.23.55</td>
-                      <td class="text-center"><span class="badge bg-green">UPDATED</span></td>
+                      <td class="text-center"><span class="badge bg-green">UP&nbsp;TO&nbsp;DATE</span></td>
                   </tr>
                   <tr>
                       <td><i class="devicon-debian-plain"></i></td>
                       <td>SuperHost</td>
                       <td>32.51.23.55</td>
-                      <td class="text-center"><span class="badge bg-green">UPDATED</span></td>
+                      <td class="text-center"><span class="badge bg-green">UP&nbsp;TO&nbsp;DATE</span></td>
                   </tr>
                 </tbody>
             </table>
         </div>
     </div>
+    <div class="alert alert-primary">
+      <h4><i class="icon fa fa-plus-circle"></i> Add server</h4>
+      You can add new server within seconds. Just run the following command as a root user on machine you want to add.
+      <p>&nbsp;</p>
+      <div class="input-group">
+          <input type="text" class="form-control" value="wget ...">
+          <span class="input-group-addon"><i class="fa fa-clipboard"></i></span>
+      </div>
+    </div>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-5">
     <div class="box">
         <div class="box-header">
           <h3 class="box-title">Server Groups</h3>
@@ -85,53 +94,35 @@
 
         </div>
         <div class="box-body no-padding">
-            <table id="servers" class="table table-hover">
-                <thead>
-                  <tr>
-                    <th>Group name</th>
-                    <th class="text-center">Servers</th>
-                    <th></th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                      <td>Server Group #1</td>
-                      <td class="text-center">5</td>
-                      <td class="text-right"><button class="btn btn-danger"><i class="fa fa-trash"></i></button>
-                  </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-md-6">
-    <div class="alert alert-success">
-      <h4><i class="icon fa fa-plus-circle"></i> New server</h4>
-      You can add new server within seconds. Just run the following command as a root user on machine you want to add.
-      <p>&nbsp;</p>
-      <div class="input-group">
-          <input type="text" class="form-control" value="wget ...">
-          <span class="input-group-addon"><i class="fa fa-clipboard"></i></span>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-6">
-    <div class="alert alert-info">
-      <h4><i class="icon fa fa-plus-circle"></i> New group</h4>
-      You can add new category by typing name and clicking "Add" button. You can group your servers for easier management.
-      <p>&nbsp;</p>
-      <div class="input-group">
-        <input type="text" class="form-control" placeholder="New category name">
-        <div class="input-group-btn">
-          <button type="button" class="btn btn-success">Add</button>
+          <table id="servers" class="table table-hover">
+              <thead>
+                <tr>
+                  <th>Group name</th>
+                  <th class="text-center">Servers</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                    <td>Server Group #1</td>
+                    <td class="text-center">5</td>
+                </tr>
+              </tbody>
+          </table>
         </div>
       </div>
-      <div class="input-group">
+      <div class="alert alert-primary">
+        <h4><i class="icon fa fa-plus-circle"></i> Add group</h4>
+        You can add new category by typing name and clicking "Add" button. You can group your servers for easier management.
+        <p>&nbsp;</p>
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="New category name">
+          <div class="input-group-btn">
+            <button type="button" class="btn btn-success">Add</button>
+          </div>
+        </div>
+        <div class="input-group">
+        </div>
       </div>
-    </div>
   </div>
 </div>
 {% endblock content %}
