--- a/up2secure/templates/base.html
+++ b/up2secure/templates/base.html
@@ -9,7 +9,6 @@
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.7 -->
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-
   <!-- Font Awesome -->
   <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
   <!-- Ionicons -->
@@ -91,16 +90,16 @@
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <img src="{% static 'gfx/user-160x160.png' %}" class="user-image" alt="User Image">
-              <span class="hidden-xs">Username</span>
+              <span class="hidden-xs">{{ user }}</span>
             </a>
             <ul class="dropdown-menu">
               <!-- User image -->
               <li class="user-header">
                 <img src="{% static 'gfx/user-160x160.png' %}" class="img-circle" alt="User Image">
                 <p>
-                  <strong>Username</strong><br />
-                  <i>thisisemail@address.com</i><br />
-                  <small><strong>Administrator</strong></small>
+                  <strong>{{ user }}</strong><br />
+                  <i>{{ user.email }}</i><br />
+                  <small><strong>{{ user.profile.get_account_type_display }}</strong></small>
                 </p>
               </li>
               <!-- Menu Footer-->
@@ -126,8 +125,8 @@
           <img src="{% static 'gfx/user-160x160.png' %}" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p>Username</p>
-          <a href="#"> Administrator</a>
+          <p>{{ user }}</p>
+          <small>{{ user.profile.get_account_type_display }}</small>
         </div>
       </div>
 
@@ -150,23 +149,28 @@
             <li>
               <a href="{% url 'server_list' %}"><i class="fa fa-angle-right"></i> Control panel</a>
             </li>
+            {% for group in user.servergroup_set.all %}
             <li>
-              <a href="{% url 'server_list' %}"><i class="fa fa-angle-right"></i> Server Group #1</a>
+              <a href="{% url 'server_group' user.id group.id %}"><i class="fa fa-angle-right"></i> {{ group.name }}</a>
             </li>
+            {% endfor %}
           </ul>
         </li>
+        {% if user.profile.account_type > 0 %}
+          {% if user.profile.account_type == 2 %}
+            <li class="{% block menu_reseller %}{% endblock %}">
+              <a href="{% url 'reseller_list' %}">
+                <i class="fa fa-handshake-o"></i> <span>Resellers</span>
+              </a>
+            </li>
+          {% endif %}
 
-        <li class="{% block menu_reseller %}{% endblock %}">
-          <a href="{% url 'reseller_list' %}">
-            <i class="fa fa-handshake-o"></i> <span>Resellers</span>
-          </a>
-        </li>
-
-        <li class="{% block menu_customer %}{% endblock %}">
-          <a href="{% url 'customer_list' %}">
-            <i class="fa fa-user-circle-o"></i> <span>Customers</span>
-          </a>
-        </li>
+          <li class="{% block menu_customer %}{% endblock %}">
+            <a href="{% url 'customer_list' %}">
+              <i class="fa fa-user-circle-o"></i> <span>Customers</span>
+            </a>
+          </li>
+        {% endif %}
 
         <li class="{% block menu_accounting %}{% endblock %}">
           <a href="{% url 'accounting' %}">
