move customer and reseller to userland, add proper server and servergroup views, add basic install script

--- a/up2secure/static/overtone.css
+++ b/up2secure/static/overtone.css
@@ -13,7 +13,7 @@ table#servers .devicon-debian-plain {
 	height: auto;
 }
 
-table.table.table-hover td {
+table.table.table-hover tr.link td {
 	cursor: pointer;
 }
 
