--- a/up2secure/templates/dashboard.html
+++ b/up2secure/templates/dashboard.html
@@ -16,23 +16,25 @@
   <div class="row">
 
     <!-- SERVERS BOX -->
-    <div class="col-lg-4 col-xs-6">
+    <div class="col-lg-3 col-xs-6">
       <div class="small-box bg-primary">
         <div class="inner">
-          <h3>0</h3>
+          <h3>{{ servers_count }}</h3>
           <p>Servers</p>
         </div>
         <div class="icon">
           <i class="fa fa-server"></i>
         </div>
-        <a href="{% url 'server_list' %}" class="small-box-footer">Show&nbsp;&nbsp;<i class="fa fa-arrow-circle-right"></i></a>
+        <a href="{% url 'servers' %}" class="small-box-footer">Show&nbsp;&nbsp;<i class="fa fa-arrow-circle-right"></i></a>
       </div>
     </div>
     <!-- SERVERS BOX END -->
+
     {% if user.profile.account_type > 0 %}
+
       {% if user.profile.account_type == 2 %}
       <!-- RESELLERS BOX -->
-      <div class="col-lg-4 col-xs-6">
+      <div class="col-lg-3 col-xs-6">
         <div class="small-box bg-green">
           <div class="inner">
             <h3>0</h3>
@@ -48,8 +50,8 @@
       {% endif %}
 
       <!-- CUSTOMERS BOX -->
-      <div class="col-lg-4 col-xs-6">
-        <div class="small-box bg-info">
+      <div class="col-lg-3 col-xs-6">
+        <div class="small-box bg-aqua">
           <div class="inner">
             <h3>0</h3>
             <p>Customers</p>
@@ -62,6 +64,21 @@
       </div>
       <!-- CUSTOMERS BOX END -->
     {% endif %}
+
+    <!-- UPDATES BOX -->
+    <div class="col-lg-3 col-xs-6">
+      <div class="small-box bg-yellow">
+        <div class="inner">
+          <h3>0</h3>
+          <p>Available updates</p>
+        </div>
+        <div class="icon">
+          <i class="fa fa-arrow-circle-o-up"></i>
+        </div>
+        <a href="{% url 'updates' %}" class="small-box-footer">Show&nbsp;&nbsp;<i class="fa fa-arrow-circle-right"></i></a>
+      </div>
+    </div>
+    <!-- UPDATES BOX END -->
 
   </div>
 {% endblock content %}
