--- a/up2secure/templates/server/servers.html
+++ b/up2secure/templates/server/servers.html
@@ -40,31 +40,29 @@
             <table id="servers" class="table table-hover">
                 <thead>
                   <tr>
-                    <th style="width: 40px;">OS</th>
+                    <th class="text-center" style="width: 40px;">OS</th>
                     <th>Hostname</th>
                     <th>IP Address</th>
                     <th class="text-center">Status</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                      <td><i class="devicon-debian-plain"></i></td>
-                      <td>SuperHost</td>
-                      <td>32.51.23.55</td>
-                      <td class="text-center"><span class="badge bg-green">UP&nbsp;TO&nbsp;DATE</span></td>
+                  {% for server in servers %}
+                  <tr class="link" data-href="{% url 'server_details' server.pk %}">
+                      <td class="text-center">{{ server.show_os_icon|safe }}</td>
+                      <td>{{ server.hostname }}</td>
+                      <td>{{ server.ip }}</td>
+                      <td class="text-center">
+                        <span class="badge bg-green">UP&nbsp;TO&nbsp;DATE</span>
+                      </td>
                   </tr>
+                  {% empty %}
                   <tr>
-                      <td><i class="devicon-debian-plain"></i></td>
-                      <td>SuperHost</td>
-                      <td>32.51.23.55</td>
-                      <td class="text-center"><span class="badge bg-green">UP&nbsp;TO&nbsp;DATE</span></td>
+                    <td class="text-center" colspan="4">
+                      No servers
+                    </td>
                   </tr>
-                  <tr>
-                      <td><i class="devicon-debian-plain"></i></td>
-                      <td>SuperHost</td>
-                      <td>32.51.23.55</td>
-                      <td class="text-center"><span class="badge bg-green">UP&nbsp;TO&nbsp;DATE</span></td>
-                  </tr>
+                  {% endfor %}
                 </tbody>
             </table>
         </div>
@@ -74,7 +72,7 @@
       You can add new server within seconds. Just run the following command as a root user on machine you want to add.
       <p>&nbsp;</p>
       <div class="input-group">
-          <input type="text" class="form-control" value="wget ...">
+          <input type="text" class="form-control" value="{{ install_script }}">
           <span class="input-group-addon"><i class="fa fa-clipboard"></i></span>
       </div>
     </div>
@@ -94,7 +92,7 @@
 
         </div>
         <div class="box-body no-padding">
-          <table id="servers" class="table table-hover">
+          <table id="server_groups" class="table table-hover">
               <thead>
                 <tr>
                   <th>Group name</th>
@@ -102,10 +100,18 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                    <td>Server Group #1</td>
-                    <td class="text-center">5</td>
+                {% for group in server_groups %}
+                <tr class="link" data-href="{% url 'server_group' group.pk %}">
+                    <td>{{ group.name }}</td>
+                    <td class="text-center">{{ group.count_servers }}</td>
                 </tr>
+                {% empty %}
+                <tr>
+                  <td class="text-center" colspan="2">
+                    No server groups
+                  </td>
+                </tr>
+                {% endfor %}
               </tbody>
           </table>
         </div>
@@ -114,14 +120,15 @@
         <h4><i class="icon fa fa-plus-circle"></i> Add group</h4>
         You can add new category by typing name and clicking "Add" button. You can group your servers for easier management.
         <p>&nbsp;</p>
+        <form method="POST" action="{% url 'add_group' %}">
+        {% csrf_token %}
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="New category name">
+          <input type="text" name="name" class="form-control" placeholder="New category name">
           <div class="input-group-btn">
-            <button type="button" class="btn btn-success">Add</button>
+            <input type="submit" class="btn btn-success" value="Add">
           </div>
         </div>
-        <div class="input-group">
-        </div>
+        </form>
       </div>
   </div>
 </div>
