--- a/up2secure/templates/base.html
+++ b/up2secure/templates/base.html
@@ -145,15 +145,25 @@
           </a>
           <ul class="treeview-menu">
             <li>
-              <a href="{% url 'server_list' %}"><i class="fa fa-angle-right"></i> Control panel</a>
+              <a href="{% url 'servers' %}">
+                <i class="fa fa-angle-right"></i> Control panel
+              </a>
+            </li>
+
+            <li class="{% block menu_updates %}{% endblock %}">
+              <a href="{% url 'updates' %}">
+                <i class="fa fa-angle-right"></i> Updates
+              </a>
             </li>
             {% for group in user.servergroup_set.all %}
             <li>
-              <a href="{% url 'server_group' user.id group.id %}"><i class="fa fa-angle-right"></i> {{ group.name }}</a>
+              <a href="{% url 'server_group' group.id %}"><i class="fa fa-angle-right"></i> {{ group.name }}</a>
             </li>
             {% endfor %}
           </ul>
         </li>
+
+
         {% if user.profile.account_type > 0 %}
           {% if user.profile.account_type == 2 %}
             <li class="{% block menu_reseller %}{% endblock %}">
@@ -239,6 +249,14 @@
 <script src="{% static 'js/fastclick.js' %}"></script>
 <!-- AdminLTE App -->
 <script src="{% static 'js/adminlte.min.js' %}"></script>
+
+<script>
+jQuery(document).ready(function($) {
+    $("tr.link").click(function() {
+        window.location = $(this).data("href");
+    });
+});
+</script>
 
 {% block extendfoot %}{% endblock extendfoot %}
 
