--- a/up2secure/templates/server/servergroup_confirm_delete.html
+++ b/up2secure/templates/server/servergroup_confirm_delete.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block menu_server %}active{% endblock %}
+
 {% block content %}
 Are you sure you want to delete group "{{ object.name }}"?
 <form method="POST">
