--- a/up2secure/templates/server/servers.html
+++ b/up2secure/templates/server/servers.html
@@ -9,129 +9,183 @@
 {% endblock extendhead %}
 
 {% block contentheader %}
-    <h1>
-      Servers
-      <small>Control panel</small>
-    </h1>
-    <ol class="breadcrumb">
-      <li><a href="#"><i class="fa fa-server"></i> Servers</a></li>
-      <li class="active">Control panel</li>
-    </ol>
+		<h1>
+			Servers
+			<small>Control panel</small>
+		</h1>
+		<ol class="breadcrumb">
+			<li><a href="#"><i class="fa fa-server"></i> Servers</a></li>
+			<li class="active">Control panel</li>
+		</ol>
 {% endblock contentheader %}
 
 {% block content %}
 
 <div class="row">
-  <div class="col-md-7">
-    <div class="box">
-        <div class="box-header">
-          <h3 class="box-title">Servers</h3>
+	<div class="col-md-7">
+		<div class="box">
+				<div class="box-header">
+					<h3 class="box-title">Servers</h3>
 
-          <!-- <div class="box-tools">
-            <ul class="pagination pagination-sm no-margin pull-right">
-              <li><a href="#">&laquo;</a></li>
-              <li><a href="#">1</a></li>
-              <li><a href="#">&raquo;</a></li>
-            </ul>
-          </div> -->
+					<!-- <div class="box-tools">
+						<ul class="pagination pagination-sm no-margin pull-right">
+							<li><a href="#">&laquo;</a></li>
+							<li><a href="#">1</a></li>
+							<li><a href="#">&raquo;</a></li>
+						</ul>
+					</div> -->
 
-        </div>
-        <div class="box-body no-padding">
-            <table id="servers" class="table table-hover">
-                <thead>
-                  <tr>
-                    <th class="text-center" style="width: 40px;">OS</th>
-                    <th>Hostname</th>
-                    <th>IP Address</th>
-                    <th class="text-center">Status</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  {% for server in servers %}
-                  <tr class="link" data-href="{% url 'server_details' server.pk %}">
-                      <td class="text-center">{{ server.show_os_icon|safe }}</td>
-                      <td>{{ server.hostname }}</td>
-                      <td>{{ server.ip }}</td>
-                      <td class="text-center">
-                        <span class="badge bg-green">UP&nbsp;TO&nbsp;DATE</span>
-                      </td>
-                  </tr>
-                  {% empty %}
-                  <tr>
-                    <td class="text-center" colspan="4">
-                      No servers
-                    </td>
-                  </tr>
-                  {% endfor %}
-                </tbody>
-            </table>
-        </div>
-    </div>
-    <div class="alert alert-primary">
-      <h4><i class="icon fa fa-plus-circle"></i> Add server</h4>
-      You can add new server within seconds. Just run the following command as a root user on machine you want to add.
-      <p>&nbsp;</p>
-      <div class="input-group">
-          <input type="text" class="form-control" value="{{ install_script }}">
-          <span class="input-group-addon"><i class="fa fa-clipboard"></i></span>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-5">
-    <div class="box">
-        <div class="box-header">
-          <h3 class="box-title">Server Groups</h3>
+				</div>
+				<div class="box-body no-padding">
+						<table id="servers" class="table table-hover">
+								<thead>
+									<tr>
+										<th class="text-center" style="width: 40px;">OS</th>
+										<th>Hostname</th>
+										<th>IP Address</th>
+										<th class="text-center">Status</th>
+									</tr>
+								</thead>
+								<tbody>
+									{% for server in servers %}
+									<tr class="link" data-href="{% url 'server_details' server.pk %}">
+											<td class="text-center">{{ server.show_os_icon|safe }}</td>
+											<td>{{ server.hostname }}</td>
+											<td>{{ server.ip }}</td>
+											<td class="text-center">
+												{{ server.show_status|safe }}
+											</td>
+									</tr>
+									{% empty %}
+									<tr>
+										<td class="text-center" colspan="4">
+											No servers
+										</td>
+									</tr>
+									{% endfor %}
+								</tbody>
+						</table>
+				</div>
+		</div>
+		{% if request.user.profile.account_type == 0 %}
+		<div class="alert alert-primary">
+			You can add new server within seconds. Just run the following command as a root user on machine you want to add.
+			<p>&nbsp;</p>
+			<div class="input-group">
+					<input id="copyTarget" type="text" class="form-control" value="{{ install_script }}">
+					<span style="cursor:pointer;" title="Copy to clipboard!" id="copyButton" class="input-group-addon"><i class="fa fa-clipboard"></i></span>
+			</div>
+		</div>
+		{% endif %}
+	</div>
+	<div class="col-md-5">
+		<div class="box">
+				<div class="box-header">
+					<h3 class="box-title">Server Groups</h3>
 
-          <!-- <div class="box-tools">
-            <ul class="pagination pagination-sm no-margin pull-right">
-              <li><a href="#">&laquo;</a></li>
-              <li><a href="#">1</a></li>
-              <li><a href="#">&raquo;</a></li>
-            </ul>
-          </div> -->
+					<!-- <div class="box-tools">
+						<ul class="pagination pagination-sm no-margin pull-right">
+							<li><a href="#">&laquo;</a></li>
+							<li><a href="#">1</a></li>
+							<li><a href="#">&raquo;</a></li>
+						</ul>
+					</div> -->
 
-        </div>
-        <div class="box-body no-padding">
-          <table id="server_groups" class="table table-hover">
-              <thead>
-                <tr>
-                  <th>Group name</th>
-                  <th class="text-center">Servers</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for group in server_groups %}
-                <tr class="link" data-href="{% url 'server_group' group.pk %}">
-                    <td>{{ group.name }}</td>
-                    <td class="text-center">{{ group.count_servers }}</td>
-                </tr>
-                {% empty %}
-                <tr>
-                  <td class="text-center" colspan="2">
-                    No server groups
-                  </td>
-                </tr>
-                {% endfor %}
-              </tbody>
-          </table>
-        </div>
-      </div>
-      <div class="alert alert-primary">
-        <h4><i class="icon fa fa-plus-circle"></i> Add group</h4>
-        You can add new category by typing name and clicking "Add" button. You can group your servers for easier management.
-        <p>&nbsp;</p>
-        <form method="POST" action="{% url 'add_group' %}">
-        {% csrf_token %}
-        <div class="input-group">
-          <input type="text" name="name" class="form-control" placeholder="New category name">
-          <div class="input-group-btn">
-            <input type="submit" class="btn btn-success" value="Add">
-          </div>
-        </div>
-        </form>
-      </div>
-  </div>
+				</div>
+				<div class="box-body no-padding">
+					<table id="server_groups" class="table table-hover">
+							<thead>
+								<tr>
+									<th>Group name</th>
+									<th class="text-center">Servers</th>
+								</tr>
+							</thead>
+							<tbody>
+								{% for group in server_groups %}
+								<tr class="link" data-href="{% url 'server_group' group.pk %}">
+										<td>{{ group.name }}</td>
+										<td class="text-center">{{ group.count_servers }}</td>
+								</tr>
+								{% empty %}
+								<tr>
+									<td class="text-center" colspan="2">
+										No server groups
+									</td>
+								</tr>
+								{% endfor %}
+							</tbody>
+					</table>
+				</div>
+			</div>
+			<form method="POST" action="{% url 'add_group' %}">
+			{% csrf_token %}
+			<div class="input-group">
+				<input type="text" name="name" class="form-control" placeholder="New category name">
+				<div class="input-group-btn">
+					<input type="submit" class="btn btn-success" value="Add new">
+				</div>
+			</div>
+			</form>
+			
+	</div>
 </div>
 {% endblock content %}
 
-{% block extendfoot %}{% endblock extendfoot %}
+{% block extendfoot %}
+<script>
+document.getElementById("copyButton").addEventListener("click", function() {
+		copyToClipboard(document.getElementById("copyTarget"));
+});
+
+function copyToClipboard(elem) {
+		// create hidden text element, if it doesn't already exist
+		var targetId = "_hiddenCopyText_";
+		var isInput = elem.tagName === "INPUT" || elem.tagName === "TEXTAREA";
+		var origSelectionStart, origSelectionEnd;
+		if (isInput) {
+				// can just use the original source element for the selection and copy
+				target = elem;
+				origSelectionStart = elem.selectionStart;
+				origSelectionEnd = elem.selectionEnd;
+		} else {
+				// must use a temporary form element for the selection and copy
+				target = document.getElementById(targetId);
+				if (!target) {
+						var target = document.createElement("textarea");
+						target.style.position = "absolute";
+						target.style.left = "-9999px";
+						target.style.top = "0";
+						target.id = targetId;
+						document.body.appendChild(target);
+				}
+				target.textContent = elem.textContent;
+		}
+		// select the content
+		var currentFocus = document.activeElement;
+		target.focus();
+		target.setSelectionRange(0, target.value.length);
+		
+		// copy the selection
+		var succeed;
+		try {
+				succeed = document.execCommand("copy");
+		} catch(e) {
+				succeed = false;
+		}
+		// restore original focus
+		if (currentFocus && typeof currentFocus.focus === "function") {
+				currentFocus.focus();
+		}
+		
+		if (isInput) {
+				// restore prior selection
+				elem.setSelectionRange(origSelectionStart, origSelectionEnd);
+		} else {
+				// clear temporary content
+				target.textContent = "";
+		}
+		elem.select();
+		return succeed;
+}
+</script>
+{% endblock extendfoot %}
