--- a/up2secure/templates/server/server_confirm_delete.html
+++ b/up2secure/templates/server/server_confirm_delete.html
@@ -3,10 +3,10 @@
 {% block menu_server %}active{% endblock %}
 
 {% block content %}
-<h3>Are you sure you want to delete group "{{ object.name }}"?</h3>
+<h3>Are you sure you want to delete server "{{ object.name }}"?</h3>
 <form method="POST">
 {% csrf_token %}
 <input type="submit" value="Yes" class="btn btn-success" />
-<a href="{% url 'server_group' object.pk %}" class="btn btn-danger">No, cancel</a>
+<a href="{% url 'server' object.pk %}" class="btn btn-danger">No, cancel</a>
 </form>
 {% endblock %}
