--- a/up2secure/templates/server/server_detail.html
+++ b/up2secure/templates/server/server_detail.html
@@ -63,6 +63,7 @@
 					</tbody>
 				</table>
 				<a href="{% url 'server_edit' object.pk %}" class="btn btn-primary btn-block">Edit server</a>
+				<a href="{% url 'server_delete' object.pk %}" class="btn btn-danger btn-block">Delete server</a>
 			</div>
 		</div>
 	</div>
