--- a/up2secure/templates/server/packageupdate_list.html
+++ b/up2secure/templates/server/packageupdate_list.html
@@ -2,7 +2,7 @@
 
 {% load staticfiles %}
 
-{% block menu_server %}active{% endblock %}
+{% block menu_updates %}active{% endblock %}
 
 {% block contentheader %}
 	<h1>
